--- a/study02/.gitignore
+++ b/study02/.gitignore
@@ -1,4 +1,17 @@
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
 ### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
@@ -27,8 +40,3 @@ bin/
 
 ### Mac OS ###
 .DS_Store
-
-### 추가 내용 ###
-.idea/
-!**/src/main/resources/**/bootstrap*.js
-!**/src/main/resources/**/bootstrap*.css
