JSP 2일차 - 자바 빈즈, page 영역

--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,4 @@ bin/
 
 ### 추가 내용 ###
 .idea/
-!**/src/main/resources/**/bootstrap*.js
-!**/src/main/resources/**/bootstrap*.css
+**/src/main/resources/**/bootstrap*
