--- a/study04/src/main/webapp/WEB-INF/web.xml
+++ b/study04/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,36 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
+<!--    web.xml 은 tomcat 서버의 설정 파일이기 때문에 해당 파일을 수정 후 반드시 tomcat 서버를 재시작해야 적용됨-->
+    <context-param>
+        <param-name>MySqlDriver</param-name>
+        <param-value>com.mysql.cj.jdbc.Driver</param-value>
+    </context-param>
+    <context-param>
+        <param-name>MySqlServerUrl</param-name>
+        <param-value>jdbc:mysql://localhost:3306/testdb1</param-value>
+    </context-param>
+    <context-param>
+        <param-name>MySqlOpt1</param-name>
+        <param-value>characterEncoding=UTF-8</param-value>
+    </context-param>
+    <context-param>
+        <param-name>MySqlOpt2</param-name>
+        <param-value>serverTimezone=UTC</param-value>
+    </context-param>
+    <context-param>
+        <param-name>MySqlUserId</param-name>
+        <param-value>test1</param-value>
+    </context-param>
+    <context-param>
+        <param-name>MySqlUserPw</param-name>
+        <param-value>full405</param-value>
+    </context-param>
 </web-app>
+
+
+
+
+
+
+
