--- a/study13/.gitignore
+++ b/study13/.gitignore
@@ -1,4 +1,17 @@
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
 ### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
@@ -27,9 +40,3 @@ bin/
 
 ### Mac OS ###
 .DS_Store
-
-### 추가 내용 ###
-.idea/
-**/src/main/resources/**/bootstrap*
-study07/study07_완성.zip
-study13/study13.zip
