--- a/study13/src/main/webapp/WEB-INF/web.xml
+++ b/study13/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
+<!--    mysql 접속 정보 -->
     <context-param>
         <param-name>MySqlDriver</param-name>
         <param-value>com.mysql.cj.jdbc.Driver</param-value>
@@ -19,6 +20,7 @@
         <param-name>MySqlUserPw</param-name>
         <param-value>full405</param-value>
     </context-param>
+<!--    파일 업로드 시 사용할 기본 폴더 위치 지정 -->
     <context-param>
         <param-name>FileUploadDirectory</param-name>
         <param-value>C:/upload</param-value>
